increased space between equations in P4

--- a/AERO 422/AERO_422_HW3_solutions_part2.tex
+++ b/AERO 422/AERO_422_HW3_solutions_part2.tex
@@ -193,8 +193,8 @@
     \textcolor{blue}{
     The closed-loop transfer function for this system is
     \begin{flalign*}
-        T(s) &= \frac{Y(s)}{R(s)}\\
-        &= \frac{\left(K + \frac{K_I}{s}\right) \frac{1}{(s+1)(s+2)}}{1 + \left(K + \frac{K_I}{s}\right) \frac{1}{(s+1)(s+2)}}\\
+        T(s) &= \frac{Y(s)}{R(s)}\\[5pt]
+        &= \frac{\left(K + \frac{K_I}{s}\right) \frac{1}{(s+1)(s+2)}}{1 + \left(K + \frac{K_I}{s}\right) \frac{1}{(s+1)(s+2)}}\\[5pt]
         &= \frac{Ks + K_I}{s^3 + 3s^2 + (2 + K)s + K_I}
     \end{flalign*}
     The characteristic equation for the clsoed-loop system is
